--- a/.github/workflows/label_enforcement.yml
+++ b/.github/workflows/label_enforcement.yml
@@ -1,4 +1,4 @@
-name: Label Enforcement
+name: Unified Label Process
 
 on:
   pull_request:
@@ -27,8 +27,110 @@ env:
   APPROVAL_USERS: "AlperPeker, alper-peker"
 
 jobs:
-  label-check:
+  ai_label_suggestion:
+    name: AI Auto Labeller
     runs-on: ubuntu-latest
+    if: >
+      github.event_name == 'pull_request' &&
+      (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize')
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Get PR Diff
+        id: pr_data
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          REPO: ${{ github.repository }}
+        run: |
+          DIFF=$(gh pr diff $PR_NUMBER --repo $REPO | head -c 6000)
+          echo "PR_DIFF<<EOF" >> $GITHUB_ENV
+          echo "$DIFF" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      - name: Read Labels JSON
+        id: read_labels
+        run: |
+          if [ -f scripts/labels.json ]; then
+            LABELS_CONTENT=$(cat scripts/labels.json | jq -c .)
+          else
+            echo "Error: scripts/labels.json file not found!"
+            exit 1
+          fi
+          echo "LABELS=$LABELS_CONTENT" >> $GITHUB_ENV
+
+      - name: Analyze with OpenAI
+        id: openai_analysis
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY_LABEL }}
+          PR_TITLE: ${{ github.event.pull_request.title }}
+          PR_BODY: ${{ github.event.pull_request.body }}
+        run: |
+          PROMPT="You are a GitHub PR Labeler Assistant.
+          Here is the definition of available labels in JSON format:
+          $LABELS
+          
+          Analyze the following Pull Request details and code diff to suggest the most appropriate labels.
+          Strictly allow ONLY labels from the provided JSON list.
+          Return ONLY a comma-separated list of labels (e.g. 'feature, backend'). Do not add any explanation or other text.
+          
+          PR Title: $PR_TITLE
+          PR Body: $PR_BODY
+          Diff Snippet:
+          $PR_DIFF"
+
+          PAYLOAD=$(jq -n \
+            --arg model "gpt-4o-mini" \
+            --arg system "You are a helpful assistant that suggests PR labels." \
+            --arg user "$PROMPT" \
+            '{
+              model: $model,
+              messages: [
+                {role: "system", content: $system},
+                {role: "user", content: $user}
+              ],
+              temperature: 0.3
+            }')
+
+          RESPONSE=$(curl -s -X POST https://api.openai.com/v1/chat/completions \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $OPENAI_API_KEY" \
+            -d "$PAYLOAD")
+
+          if echo "$RESPONSE" | jq -e '.error' > /dev/null; then
+            exit 1
+          fi
+
+          SUGGESTION=$(echo "$RESPONSE" | jq -r '.choices[0].message.content')
+          CLEAN_SUGGESTION=$(echo "$SUGGESTION" | sed 's/[."]//g' | tr -d '\n')
+          echo "suggestion=$CLEAN_SUGGESTION" >> $GITHUB_OUTPUT
+
+      - name: Apply Labels
+        uses: actions/github-script@v7
+        if: success()
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const rawLabels = "${{ steps.openai_analysis.outputs.suggestion }}";
+            if (!rawLabels) return;
+
+            const labelsToAdd = rawLabels.split(',').map(l => l.trim()).filter(l => l.length > 0);
+
+            if (labelsToAdd.length > 0) {
+              await github.rest.issues.addLabels({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                labels: labelsToAdd
+              });
+            }
+
+  label-check:
+    name: Enforcement Check
+    runs-on: ubuntu-latest
+    needs: ai_label_suggestion
+    if: always()
     steps:
       - name: Require approvals and SemVer labels
         uses: actions/github-script@v7
@@ -44,7 +146,7 @@ jobs:
                   : null;
 
             if (!number) {
-              core.setFailed("PR number not found in event payload.");
+              core.setFailed("PR number not found.");
               return;
             }
 
@@ -54,58 +156,40 @@ jobs:
             }
 
             const approvers = process.env.APPROVAL_USERS.split(',').map(s => s.trim());
-
             let labels = await getLabels();
 
             if (!labels.includes("approved")) {
-              const comments = await github.rest.issues.listComments({ owner, repo, issue_number: number, per_page: 100 });
-              
-              const approvedBy = new Set(
-                comments.data
-                  .filter(c => (c.body || "").trim().startsWith("/approve"))
-                  .map(c => c.user.login)
-                  .filter(u => approvers.includes(u))
-              );
-              
-              const pending = approvers.filter(u => !approvedBy.has(u));
-              core.warning(`Pending approvals: ${pending.length ? pending.join(', ') : 'none'}`);
-              
-              const recent = comments.data.slice(-10).some(c =>
-                (c.body || '').includes('Pending approvals:') &&
-                pending.every(u => (c.body || '').includes(`@${u}`))
-              );
-              
-              if (!recent && context.eventName !== "workflow_dispatch" && pending.length > 0) {
-                await github.rest.issues.createComment({
-                  owner, repo, issue_number: number,
-                  body: `Pending approvals: ${pending.map(u => `@${u}`).join(', ')}`
-                });
-              }
+              const comments = await github.rest.issues.listComments({
+                 owner, repo, issue_number: number, per_page: 100
+              });
 
-              core.setFailed(`Your labels must be approved by: ${approvers.join(', ')} to merge into main.`);
-              return;
+              const pending = new Set(approvers);
+              
+              comments.data.forEach(c => {
+                if ((c.body || "").trim().startsWith("/approve") && approvers.includes(c.user.login)) {
+                  pending.delete(c.user.login);
+                }
+              });
+              
+              if (pending.size === 0) {
+                 await github.rest.issues.addLabels({
+                   owner, repo, issue_number: number, labels: ["approved"]
+                 });
+                 labels.push("approved");
+              } else {
+                 core.setFailed(`Missing approvals from: ${[...pending].join(', ')}`);
+                 return; 
+              }
             }
 
             const semver = new Set([
-              "breaking-change",
-              "feature",
-              "fix",
-              "security",
-              "perf",
-              "refactor",
-              "docs",
-              "test",
-              "build",
-              "ci",
-              "deps",
-              "revert"
+              "breaking-change", "feature", "fix", "security", "perf",
+              "refactor", "docs", "test", "build", "ci", "deps", "revert"
             ]);
             
             const found = labels.filter(l => semver.has(l));
 
             if (found.length < 1) {
-              core.setFailed("At least one SemVer-impact label is required: breaking-change, feature, fix, security, perf, refactor, docs, test, build, ci, deps, revert.");
+              core.setFailed("Missing SemVer label (feature, fix, breaking-change, etc.)");
               return;
             }
-
-            core.info(`Success! 'approved' present; SemVer labels found: ${found.join(', ')}`);
