--- a/.github/workflows/approval_handler.yml
+++ b/.github/workflows/approval_handler.yml
@@ -29,36 +29,41 @@ jobs:
             const user   = context.payload.comment.user.login;
             const body   = context.payload.comment.body.trim();
 
-            if (!body.startsWith('/approve')) {
-              return;
-            }
+            if (!body.startsWith('/approve')) return;
 
-            const APPROVERS = process.env.APPROVAL_USERS.split(",").map(s => s.trim());
+            const APPROVERS_LIST = process.env.APPROVAL_USERS.split(",").map(s => s.trim());
             const REQUIRED  = parseInt(process.env.REQUIRED_APPROVALS, 10);
 
-            if (!APPROVERS.includes(user)) {
+            if (!APPROVERS_LIST.includes(user)) {
               await github.rest.issues.createComment({
                 owner, repo, issue_number: number,
-                body: `⛔ @${user} is not authorized to approve. Allowed approvers: ${APPROVERS.join(", ")}`
+                body: `⛔ @${user} is not authorized to approve. Allowed approvers: ${APPROVERS_LIST.join(", ")}`
               });
               return;
             }
 
-            const comments = await github.rest.issues.listComments({ owner, repo, issue_number: number, per_page: 200 });
+            const comments = await github.rest.issues.listComments({ owner, repo, issue_number: number, per_page: 100 });
+            let currentApprovers = new Set();
             
-            const approvers = new Set(
-              comments.data
-                .filter(c => (c.body || "").trim().startsWith("/approve"))
-                .map(c => c.user.login)
-                .filter(u => APPROVERS.includes(u))
-            );
+            for (const c of comments.data) {
+              const cBody = (c.body || "").trim();
+              
+              if (cBody.includes("System Reset:") || cBody.includes("Previous approvals have been invalidated")) {
+                currentApprovers.clear();
+                continue;
+              }
 
-            approvers.add(user);
+              if (cBody.startsWith("/approve") && APPROVERS_LIST.includes(c.user.login)) {
+                currentApprovers.add(c.user.login);
+              }
+            }
+
+            currentApprovers.add(user);
 
             const labelsNow = (await github.rest.issues.listLabelsOnIssue({ owner, repo, issue_number: number }))
               .data.map(l => l.name);
 
-            if (approvers.size >= REQUIRED) {
+            if (currentApprovers.size >= REQUIRED) {
               if (!labelsNow.includes("approved")) {
                  await github.rest.issues.addLabels({
                    owner, repo, issue_number: number, labels: ["approved"]
@@ -67,33 +72,19 @@ jobs:
               
               await github.rest.issues.createComment({
                 owner, repo, issue_number: number,
-                body: `✅ **Approved!** Total approvals: ${approvers.size}/${REQUIRED}. (${[...approvers].map(a => "@" + a).join(", ")})`
+                body: `✅ **Approved!** Total approvals: ${currentApprovers.size}/${REQUIRED}. (${[...currentApprovers].map(a => "@" + a).join(", ")})`
               });
 
               const pr = await github.rest.pulls.get({ owner, repo, pull_number: number });
               const headSha = pr.data.head.sha;
-              core.info(`PR head sha: ${headSha}`);
 
               const { data: runs } = await github.rest.actions.listWorkflowRunsForRepo({
-                owner,
-                repo,
-                workflow_id: "label_enforcement.yml", 
-                event: "pull_request", 
-                head_sha: headSha,
-                status: "failure", 
-                per_page: 1
+                owner, repo, workflow_id: "label_enforcement.yml", event: "pull_request", head_sha: headSha, status: "failure", per_page: 1
               });
 
               if (runs.workflow_runs.length > 0) {
                 const run_id = runs.workflow_runs[0].id;
-                core.info(`Found failed 'label_enforcement.yml' run ID: ${run_id}. Triggering re-run...`);
-
-                await github.rest.actions.reRunWorkflowFailedJobs({
-                  owner,
-                  repo,
-                  run_id: run_id
-                });
-                
+                await github.rest.actions.reRunWorkflowFailedJobs({ owner, repo, run_id: run_id });
                 await github.rest.issues.createComment({
                     owner, repo, issue_number: number,
                     body: `🔄 Re-running the failed 'label-check' job now that approval is received.`
@@ -101,9 +92,9 @@ jobs:
               }
 
             } else {
-              const pending = APPROVERS.filter(a => !approvers.has(a));
+              const pending = APPROVERS_LIST.filter(a => !currentApprovers.has(a));
               await github.rest.issues.createComment({
                 owner, repo, issue_number: number,
-                body: `⚠️ Approval recorded. Current: ${approvers.size}/${REQUIRED}. Pending: ${pending.map(a => "@" + a).join(", ")}`
+                body: `⚠️ Approval recorded. Current: ${currentApprovers.size}/${REQUIRED}. Pending: ${pending.map(a => "@" + a).join(", ")}`
               });
             }
