--- a/.github/workflows/label_enforcement.yml
+++ b/.github/workflows/label_enforcement.yml
@@ -3,7 +3,15 @@ name: Unified Label Process
 on:
   pull_request:
     types:
-      [opened, synchronize, reopened, edited, ready_for_review, labeled, unlabeled]
+      [
+        opened,
+        synchronize,
+        reopened,
+        edited,
+        ready_for_review,
+        labeled,
+        unlabeled,
+      ]
   workflow_dispatch:
     inputs:
       pr_number:
@@ -115,6 +123,7 @@ jobs:
 
   label-check:
     runs-on: ubuntu-latest
+    needs: ai_label_suggestion
     if: always()
     steps:
       - name: Verify Mandatory Labels
