--- a/.github/workflows/label_enforcement.yml
+++ b/.github/workflows/label_enforcement.yml
@@ -123,10 +123,13 @@ jobs:
 
   label-check:
     runs-on: ubuntu-latest
-    needs: ai_label_suggestion
-    if: always()
+    needs: ai_label_suggestion 
+    if: always()               
     steps:
-      - name: Verify Mandatory Labels
+      - name: Wait for Label Guard
+        run: sleep 10
+
+      - name: Verify Mandatory Labels & Author
         uses: actions/github-script@v7
         with:
           script: |
@@ -145,6 +148,28 @@ jobs:
 
             if (!labels.includes("approved")) {
               core.setFailed("❌ Missing 'approved' label! Use '/approve' command to verify this PR.");
-            } else {
-              core.info("✅ Approval check passed.");
+              return;
             }
+
+            const events = await github.rest.issues.listEvents({
+              owner,
+              repo,
+              issue_number: number,
+              per_page: 100
+            });
+
+            const approvedEvents = events.data
+              .filter(e => e.event === 'labeled' && e.label && e.label.name === 'approved')
+              .sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
+
+            if (approvedEvents.length > 0) {
+              const lastEvent = approvedEvents[0];
+              const actor = lastEvent.actor.login;
+              
+              if (actor !== 'github-actions[bot]') {
+                core.setFailed(`❌ Security Violation: The 'approved' label was added manually by @${actor}. Approvals must be done via /approve command.`);
+                return;
+              }
+            }
+
+            core.info("✅ Approval check passed (Verified Bot Action).");
