--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -179,47 +179,63 @@ jobs:
           echo "global_next=$GLOBAL_NEXT"   >> "$GITHUB_OUTPUT"
 
   create_and_push_tags:
-    name: Create and push tags
-    runs-on: ubuntu-latest
-    needs: compute_versions
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Configure git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions@users.noreply.github.com"
-      - name: Create and push tags
-        shell: bash
-        run: |
-          set -euo pipefail
-          
-          ensure_tag() {
-            local tag="$1"
-            local msg="$2"
-            if [[ -z "$tag" ]]; then return; fi
+      name: Create and push tags
+      runs-on: ubuntu-latest
+      needs: compute_versions
+      if: needs.compute_versions.outputs.global_next != ''
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 
+  
+        - name: Configure git
+          run: |
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions@users.noreply.github.com"
+  
+        - name: Create and push tags
+          shell: bash
+          run: |
+            set -euo pipefail
             
-            if git rev-parse "$tag" >/dev/null 2>&1; then
-              echo "Tag $tag already exists. Skipping creation."
+            git fetch --tags --force
+            
+            TAGS_TO_PUSH=""
+  
+            ensure_tag() {
+              local tag="$1"
+              local msg="$2"
+              if [[ -z "$tag" ]]; then return; fi
+              
+              if git rev-parse "$tag" >/dev/null 2>&1; then
+                echo "Tag '$tag' already exists on remote/local. Skipping creation."
+              else
+                echo "Creating new tag: $tag"
+                git tag -a "$tag" -m "$msg"
+                # Sadece yeni oluşturulan tagi listeye ekle
+                TAGS_TO_PUSH="$TAGS_TO_PUSH $tag"
+              fi
+            }
+  
+            F_TAG="${{ needs.compute_versions.outputs.frontend_next }}"
+            B_TAG="${{ needs.compute_versions.outputs.backend_next }}"
+            FN_TAG="${{ needs.compute_versions.outputs.functions_next }}"
+            INF_TAG="${{ needs.compute_versions.outputs.infra_next }}"
+            G_TAG="${{ needs.compute_versions.outputs.global_next }}"
+  
+            ensure_tag "$G_TAG" "Global release"
+            ensure_tag "$F_TAG" "Frontend release"
+            ensure_tag "$B_TAG" "Backend release"
+            ensure_tag "$FN_TAG" "Functions release"
+            ensure_tag "$INF_TAG" "Infra release"
+  
+            if [[ -n "$TAGS_TO_PUSH" ]]; then
+              echo "Pushing new tags: $TAGS_TO_PUSH"
+              git push origin $TAGS_TO_PUSH
             else
-              echo "Creating new tag: $tag"
-              git tag -a "$tag" -m "$msg"
+              echo "No new tags to push."
             fi
-          }
-
-          F_TAG="${{ needs.compute_versions.outputs.frontend_next }}"
-          B_TAG="${{ needs.compute_versions.outputs.backend_next }}"
-          FN_TAG="${{ needs.compute_versions.outputs.functions_next }}"
-          INF_TAG="${{ needs.compute_versions.outputs.infra_next }}"
-          G_TAG="${{ needs.compute_versions.outputs.global_next }}"
-
-          ensure_tag "$G_TAG" "Global release"
-          ensure_tag "$F_TAG" "Frontend release"
-          ensure_tag "$B_TAG" "Backend release"
-          ensure_tag "$FN_TAG" "Functions release"
-          ensure_tag "$INF_TAG" "Infra release"
-
-          git push --tags
 
   major_release:
     name: Create Major Global Release
